{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 527,
  "lineage": "8ba55cf9-d22b-c800-66d7-1179e2616d51",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "raws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-018fe9616247f929a",
            "domain": "vpc",
            "id": "eipalloc-018fe9616247f929a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-20-17-197.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.17.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP NatGW 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "EIP NatGW 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa762934471b5fae",
            "domain": "vpc",
            "id": "eipalloc-0aa762934471b5fae",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-134-249-212.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.249.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP NatGW 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "EIP NatGW 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "raws_ec2_webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089a545a9ed9893b6",
            "arn": "arn:aws:ec2:us-east-2:367403385922:instance/i-0f8a9366b584658a2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8a9366b584658a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2b29f7728902d1c",
            "private_dns": "ip-10-0-20-15.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc4603c2c406a9c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0908cef3ef5814133",
            "tags": {
              "Name": "webservers 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "webservers 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cb7cfce9575f433"
            ]
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_route_table.raws_rtb_internet",
            "aws_route_table.raws_rtb_natgw",
            "aws_route_table_association.raws_rtb_internet_association",
            "aws_security_group.raws_sg_webservers",
            "aws_subnet.raws_private_subnets",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089a545a9ed9893b6",
            "arn": "arn:aws:ec2:us-east-2:367403385922:instance/i-0e2c4b07c9247372f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2c4b07c9247372f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023752c2779d0c30e",
            "private_dns": "ip-10-0-21-20.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00691741baf9543ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eaaf1cba5778ecbe",
            "tags": {
              "Name": "webservers 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "webservers 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cb7cfce9575f433"
            ]
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_route_table.raws_rtb_internet",
            "aws_route_table.raws_rtb_natgw",
            "aws_route_table_association.raws_rtb_internet_association",
            "aws_security_group.raws_sg_webservers",
            "aws_subnet.raws_private_subnets",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "raws_internet_gateway_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:internet-gateway/igw-01b24627621042281",
            "id": "igw-01b24627621042281",
            "owner_id": "367403385922",
            "tags": {
              "Name": "Internet Gateway Dev",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Internet Gateway Dev",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "raws_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:367403385922:loadbalancer/app/alb/72f5bdb96f43c967",
            "arn_suffix": "app/alb/72f5bdb96f43c967",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-383348514.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:367403385922:loadbalancer/app/alb/72f5bdb96f43c967",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09f2df55d588512b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b45738fb96f5b319"
              },
              {
                "subnet_id": "subnet-0dd1ffc93377ae6a1"
              }
            ],
            "subnets": [
              "subnet-0b45738fb96f5b319",
              "subnet-0dd1ffc93377ae6a1"
            ],
            "tags": {
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc_id": "vpc-0dcd0a06586949b6e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.raws_sg_alb",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "raws_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:367403385922:listener/app/alb/72f5bdb96f43c967/cf78591f2df3762e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:367403385922:targetgroup/tg/dc408122e74b4fab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:367403385922:listener/app/alb/72f5bdb96f43c967/cf78591f2df3762e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:367403385922:loadbalancer/app/alb/72f5bdb96f43c967",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.raws_alb",
            "aws_lb_target_group.raws_tg_webservers",
            "aws_security_group.raws_sg_alb",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "raws_tg_webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:367403385922:targetgroup/tg/dc408122e74b4fab",
            "arn_suffix": "targetgroup/tg/dc408122e74b4fab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:367403385922:targetgroup/tg/dc408122e74b4fab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "raws_alb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:367403385922:targetgroup/tg/dc408122e74b4fab-20221114085538923100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:367403385922:targetgroup/tg/dc408122e74b4fab",
            "target_id": "i-0f8a9366b584658a2"
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_instance.raws_ec2_webservers",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_lb_target_group.raws_tg_webservers",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_route_table.raws_rtb_internet",
            "aws_route_table.raws_rtb_natgw",
            "aws_route_table_association.raws_rtb_internet_association",
            "aws_security_group.raws_sg_webservers",
            "aws_subnet.raws_private_subnets",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:367403385922:targetgroup/tg/dc408122e74b4fab-20221114085538612100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:367403385922:targetgroup/tg/dc408122e74b4fab",
            "target_id": "i-0e2c4b07c9247372f"
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_instance.raws_ec2_webservers",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_lb_target_group.raws_tg_webservers",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_route_table.raws_rtb_internet",
            "aws_route_table.raws_rtb_natgw",
            "aws_route_table_association.raws_rtb_internet_association",
            "aws_security_group.raws_sg_webservers",
            "aws_subnet.raws_private_subnets",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "raws_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-018fe9616247f929a",
            "connectivity_type": "public",
            "id": "nat-07e539766aad25382",
            "network_interface_id": "eni-0827ea8dc89563efe",
            "private_ip": "10.0.0.154",
            "public_ip": "3.20.17.197",
            "subnet_id": "subnet-0dd1ffc93377ae6a1",
            "tags": {
              "Name": "Nat Gateway 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Nat Gateway 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            }
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa762934471b5fae",
            "connectivity_type": "public",
            "id": "nat-0af0756373606c94b",
            "network_interface_id": "eni-0f16a4d8f8203568a",
            "private_ip": "10.0.1.95",
            "public_ip": "3.134.249.212",
            "subnet_id": "subnet-0b45738fb96f5b319",
            "tags": {
              "Name": "Nat Gateway 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Nat Gateway 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            }
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raws_rtb_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:route-table/rtb-0a4bf03c6d45f4bcd",
            "id": "rtb-0a4bf03c6d45f4bcd",
            "owner_id": "367403385922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b24627621042281",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internet",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Internet",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raws_rtb_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:route-table/rtb-0e4c2a1e51913ee65",
            "id": "rtb-0e4c2a1e51913ee65",
            "owner_id": "367403385922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07e539766aad25382",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat GW 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Nat GW 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:route-table/rtb-0059cedcd8e6d7f7e",
            "id": "rtb-0059cedcd8e6d7f7e",
            "owner_id": "367403385922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0af0756373606c94b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nat GW 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Nat GW 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "raws_rtb_internet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014972bb7aeded80e",
            "route_table_id": "rtb-0a4bf03c6d45f4bcd",
            "subnet_id": "subnet-0dd1ffc93377ae6a1"
          },
          "dependencies": [
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_route_table.raws_rtb_internet",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f2952d36bc10890",
            "route_table_id": "rtb-0a4bf03c6d45f4bcd",
            "subnet_id": "subnet-0b45738fb96f5b319"
          },
          "dependencies": [
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_route_table.raws_rtb_internet",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "raws_rtb_natgw_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d020715ee27914c",
            "route_table_id": "rtb-0e4c2a1e51913ee65",
            "subnet_id": "subnet-0908cef3ef5814133"
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_route_table.raws_rtb_natgw",
            "aws_subnet.raws_private_subnets",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0651124191ff944b1",
            "route_table_id": "rtb-0059cedcd8e6d7f7e",
            "subnet_id": "subnet-0eaaf1cba5778ecbe"
          },
          "dependencies": [
            "aws_eip.raws_eip",
            "aws_internet_gateway.raws_internet_gateway_dev",
            "aws_nat_gateway.raws_nat_gateway",
            "aws_route_table.raws_rtb_natgw",
            "aws_subnet.raws_private_subnets",
            "aws_subnet.raws_public_subnets",
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "raws_sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:security-group/sg-09f2df55d588512b4",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f2df55d588512b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow http alb",
            "name_prefix": "",
            "owner_id": "367403385922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-alb-http",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "sg-alb-http",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "raws_sg_webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:security-group/sg-01cb7cfce9575f433",
            "description": "Allow http inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cb7cfce9575f433",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow http webservers",
            "name_prefix": "",
            "owner_id": "367403385922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-webservers-http",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "sg-webservers-http",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raws_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:subnet/subnet-0908cef3ef5814133",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0908cef3ef5814133",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367403385922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Private Subnet 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:subnet/subnet-0eaaf1cba5778ecbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaaf1cba5778ecbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367403385922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Private Subnet 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raws_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:subnet/subnet-0dd1ffc93377ae6a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd1ffc93377ae6a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367403385922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Public Subnet 1",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:subnet/subnet-0b45738fb96f5b319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b45738fb96f5b319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367403385922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "Public Subnet 2",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "vpc_id": "vpc-0dcd0a06586949b6e"
          },
          "dependencies": [
            "aws_vpc.raws_vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "raws_vpc_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367403385922:vpc/vpc-0dcd0a06586949b6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e86453fefb242ea8",
            "default_route_table_id": "rtb-038e32a023546ce9f",
            "default_security_group_id": "sg-016d688c2439fa3f2",
            "dhcp_options_id": "dopt-0bc0dd1209d79af67",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcd0a06586949b6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038e32a023546ce9f",
            "owner_id": "367403385922",
            "tags": {
              "Name": "VPC Dev",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            },
            "tags_all": {
              "Name": "VPC Dev",
              "environment": "dev",
              "owner": "jack@123cloudjourney.com",
              "project": "123cloudjourney-alpha"
            }
          }
        }
      ]
    }
  ]
}